--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.2",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.2",
+    "react-helmet": "^5.2.0",
     "react-navigation": "^3.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
