--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
 	  "start": "node server.js",
-	  "build": "cd client && npm run build"
+	  "build": "cd client && yarn && yarn build"
   },
   "heroku-run-build-script": true,
   "dependencies": {
