--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "speed-test-webapp",
+  "name": "client",
   "version": "1.0.0",
-  "description": "React app and express/graphql server to display data from mongo made by speed-test-process",
-  "main": "server.js",
-  "author": "Liam Kennedy <liam@lkenn.xyz>",
-  "license": "MIT",
-  "scripts": {
-    "start": "node server.js",
-    "build": "cd client && yarn && yarn build"
-  },
-  "heroku-run-build-script": true,
+  "private": true,
   "dependencies": {
-    "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
-    "graphql": "^14.1.1",
-    "mongodb": "^3.1.13",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "d3": "^5.9.1",
+    "node-sass": "^4.12.0",
+    "react": "^16.8.2",
+    "react-datepicker": "^2.8.0",
+    "react-dom": "^16.8.2",
+    "react-helmet": "^5.2.0",
+    "react-navigation": "^3.3.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "react-sidenav": "^3.1.7",
+    "recharts": "^1.5.0",
+    "styled-components": "^4.1.3"
   },
+  "proxy": "http://localhost:4000",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "dotenv": "^6.2.0"
+    "create-react-class": "^15.6.3"
   }
 }
